[package]
name = "cachelib"
version = "0.1.0"
authors = ["Facebook <opensource+cachelib@fb.com>"]
edition = "2021"
description = "cachelib rust bindings"
repository = "https://github.com/facebook/cachelib/"
license = "MIT OR Apache-2.0"

[dependencies]
abomonation = "0.7"
anyhow = "1.0"
bytes = { version = "1.0", features = ["serde"] }
cxx = "1.0.58"
libc = "0.2.139"
once_cell = "1.17"
thiserror = "1.0.38"

[build-dependencies]
cxx-build = "1.0"
